# opensea-data-streaming

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  retrieve_events.py  setup.cfg  setup.py
docker/cassandra/: entrypoint.cql
docker/conf/: install_jars.sh  spark-defaults.conf
docker/kafka-connect/: Dockerfile
docker/kafka-connect/connectors/: cassandra-collection-metrics-sink.json  cassandra-global-metrics-sink.json  minio-s3-sink.json
docker/monitoring/grafana/datasources/: prometheus_ds.yml
docker/monitoring/jmx-exporter/: confluent_schemaregistry.yml  kafka-broker.yml  kafka-connect.yml  zookeeper.yml
docker/monitoring/prometheus/: prometheus.yml
docker/notebook/: Dockerfile
docker/socket/: Dockerfile
docker/spark/: Dockerfile  spark-defaults.conf
docker/web/: Dockerfile
notebooks/: process.ipynb  streaming.ipynb
spark-conf/: spark-defaults.conf
src/opensea_client/: client.py
src/opensea_client/cli/: __main__.py  main.py
src/opensea_client/dispatchers/: base.py  data_files.py  kafka.py
src/opensea_client/processors/: base.py  data_files.py  kafka.py
src/opensea_monitoring/cli/: __main__.py  main.py
src/opensea_monitoring/processors/: collections_events.py  global_events.py  preprocessing.py  spark.py
src/opensea_monitoring/utils/: configs.py  kafka.py  schemas.py  spark.py  timestamp.py
src/opensea_monitoring/www/app/: __main__.py  app.py
src/opensea_monitoring/www/app/pages/: collections.py
src/opensea_monitoring/www/app/utils/: components.py  configs.py
src/opensea_monitoring/www/backend/: client.py
src/opensea_monitoring/www/backend/models/: models.py
tests/opensea_monitoring/www/: test_client.py
workdir/: opensea_client.py  processors.py  retrieve_events.py  stream.py
workdir/notebooks/: README.md  batch.ipynb  cassandra.ipynb  process.ipynb  streaming.ipynb
workdir/notebooks/demo/: kafka-connector-config.json  spark_kafka_stream.ipynb  spark_s3_batch.ipynb
