[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [{ "name" = "Jose R. Sanchez Viloria" }]
name = "opensea-data-streaming"
version = "1.0.0"
readme = "file: README.md"
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved",
    "Operating System :: OS Independent",
]
dependencies = ["python-dotenv"]

[project.optional-dependencies]
ingestion = ["pyspark", "websockets", "confluent-kafka"]
web = ["cassandra-driver", "streamlit", "polars", "plotly"]
dev = [
    "opensea-data-streaming[web,ingestion]",
    "pytest",
    "flake8",
    "black",
    "isort",
]

[project.scripts]
opensea-client = "opensea_client.cli.main:main"
